<resources>
    <string name="app_name">Pool Management</string>
    <string name="text_login">NITC Swimming Pool Management Login</string>
    <string name="editText_username">Enter admin username</string>
    <string name="editText_password">Enter Password</string>
    <string name="button_login">Login</string>
    <string name="action_adduser">Add User</string>
    <string name="action_payment">Update Payment</string>
    <string name="action_visitors">Today visitors</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_attendace">Attendace</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editText_checkin">Enter card no.</string>
    <string name="button_checkin">Check-in</string>
    <string name="text_payment">Update Payment</string>
    <string name="textcard_payment">Card no.</string>
    <string name="editText_card_payment">Enter Card No.</string>
    <string name="textreceipt_payment">Receipt No.</string>
    <string name="textamount_payment">Amount</string>
    <string name="textvisits_payment">Visits</string>
    <string name="editText_receipt_payment">Enter Receipt No.</string>
    <string name="editText_amount_payment">Enter amount</string>
    <string name="editText_visits_payment">Enter no. of visits</string>
    <string name="button_payment">Update Payment</string>
    <string name="text_user">New Pool User</string>
    <string name="text_card_user">Card No.</string>
    <string name="text_name_user">Name</string>
    <string name="text_contact_user">Contact</string>
    <string name="text_gender_user">Gender</string>
    <string name="text_visits_user">Visits</string>
    <string name="text_validity_user">Validity</string>
    <string name="editText_card_user">Enter card no.</string>
    <string name="editText_name_user">Enter name</string>
    <string name="editText_gender_user">Male/Female</string>
    <string name="button_user">Create user</string>
    <string name="editText_validity_user">Date of expiry</string>
    <string name="editText_contact_user">Enter contact no.</string>
    <string name="editText_visits_user">Visits left</string>
    <string name="editText_intvisits_user">Enter visits</string>
    <string name="et_validityDate">Select Date</string>
    <string name="tv_validity">Validity</string>
    <string name="et_validity">Select Date</string>
    <string name="button_search">Search User</string>
    <string name="button_clear">Clear</string>
    <string name="button_visitor">List Today\'s Visitor</string>
    <string name="textView_visitor">Today\'s Visitors</string>
    <string name="action_searchall">Check All Users</string>
    <string name="textView_alluser">Pool Users</string>
    <string name="textView_category">Category</string>
    <string name="button_forgot">Forgot Password</string>
    <string name="textView_forget">Forgot Password?</string>
    <string name="editText_forget_password">Enter your username</string>
    <string name="button_reset">Resend my password</string>

</resources>
