<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <TextView
        android:id="@+id/text_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/text_payment"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textcard_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/textcard_payment"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_card_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/editText_card_payment"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/textcard_payment"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textreceipt_payment"
        android:layout_width="100dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/textreceipt_payment"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcard_payment"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/textamount_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textamount_payment"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textreceipt_payment"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textvisits_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textvisits_payment"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textamount_payment"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editText_receipt_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:hint="@string/editText_receipt_payment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText_amount_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_card_payment"
        app:layout_constraintVertical_bias="0.379" />

    <EditText
        android:id="@+id/editText_amount_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_amount_payment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/textamount_payment"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_visits_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_visits_payment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/textvisits_payment"
        app:layout_constraintTop_toBottomOf="@+id/editText_amount_payment"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_payment"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_visits_payment"
        android:onClick="updatepayment"/>
</androidx.constraintlayout.widget.ConstraintLayout>